--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <script defer src="https://kit.fontawesome.com/a388be2306.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/841935366e.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Blinker:wght@400;600;700;800;900&display=swap" rel="stylesheet">
